# pxlib

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  cmakeconfig.h.in  config.h.in  configure.ac  configure.in  pxlib.pc.in  pxlib.rc.in  pxlib.spec.in
.github/: dependabot.yml
.github/workflows/: README.md  build.yml
_codeql_build_dir/: pxversion.h
_codeql_build_dir/include/: paradox-gsf.h  paradox.h
debian/: .cvsignore  changelog  control  copyright  dirs  pxlib-dev.files  pxlib-dev.install  pxlib1.files  rules  shlibs.pxlib1  watch
doc/: .cvsignore  Makefile.am  PX_add_primary_index.sgml  PX_close.sgml  PX_close_blob.sgml  PX_create_db.sgml  PX_create_file.sgml  PX_create_fp.sgml  PX_date2string.sgml  PX_delete.sgml  PX_delete_record.sgml  PX_get_data_alpha.sgml  PX_get_data_bcd.sgml  PX_get_data_blob.sgml  PX_get_data_byte.sgml  PX_get_data_bytes.sgml  PX_get_data_double.sgml  PX_get_data_graphic.sgml  PX_get_data_long.sgml  PX_get_data_short.sgml  PX_get_field.sgml  PX_get_fields.sgml  PX_get_majorversion.sgml  PX_get_minorversion.sgml  PX_get_num_fields.sgml  PX_get_num_records.sgml  PX_get_numfields.sgml  PX_get_numrecords.sgml  PX_get_opaque.sgml  PX_get_parameter.sgml  PX_get_record.sgml  PX_get_record2.sgml  PX_get_recordsize.sgml  PX_get_subminorversion.sgml  PX_get_value.sgml  PX_insert_record.sgml  PX_new.sgml  PX_new2.sgml  PX_new3.sgml  PX_new_blob.sgml  (+31 more)
include/: .cvsignore  Makefile.am  paradox-gsf.h.in  paradox-mp.h  paradox.h  paradox.h.in  pxversion.h.in
po/: .cvsignore  POTFILES.in  de.po  es.po  fr.po
pxview/: Makefile.am  main.c
pxwrite/: ChangeLog  Makefile.am  README  autogen.sh  configure.in  pxwrite.spec.in
pxwrite/doc/: Makefile.am  pxwrite.sgml
pxwrite/po/: .cvsignore  POTFILES.in  de.po
pxwrite/src/: .cvsignore  Makefile.am  csv.c  main.c  msgno.h
src/: Makefile.am  fileformat.h  gregor.c  paradox.c  px_crypt.c  px_crypt.h  px_encode.c  px_encode.h  px_error.c  px_error.h  px_head.c  px_head.h  px_intern.h  px_io.c  px_io.h  px_memory.c  px_memory.h  px_memprof.c  px_misc.c  px_misc.h
testdata/: TYPSAMMLUNG.sch  TypSammlung.DB  TypSammlung.MB  TypSammlung.PX  TypSammlung.VAL  TypSammlung.X02  TypSammlung.X0C  TypSammlung.Y02  TypSammlung.Y0C
