
.sgml.3:
	docbook2man $<

clean:
	rm -f ${man_MANS}

EXTRA_DIST = PX_get_majorversion.sgml PX_get_minorversion.sgml PX_get_subminorversion.sgml PX_new2.sgml PX_new.sgml PX_open_file.sgml PX_open_fp.sgml PX_get_data_short.sgml PX_get_data_long.sgml PX_get_data_double.sgml

man_MANS = PX_get_majorversion.3\
           PX_new2.3 \
           PX_new.3 \
           PX_get_minorversion.3 \
           PX_get_subminorversion.3 \
           PX_open_file.3 \
           PX_open_fp.3 \
           PX_get_data_short.3 \
           PX_get_data_long.3 \
           PX_get_data_double.3 
